--- a/Ardoise/app/src/main/AndroidManifest.xml
+++ b/Ardoise/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ListeEvenementsActivity"></activity>
+        <activity android:name=".EquilibreActivity"></activity>
+        <activity android:name=".ListeDepensesActivity" />
+        <activity android:name=".ListeEvenementsActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
