--- a/Ardoise/app/src/main/AndroidManifest.xml
+++ b/Ardoise/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AjoutEvenementActivity" />
+        <activity android:name=".AjoutDepenseActivity" />
         <activity android:name=".EquilibreActivity" />
         <activity android:name=".ListeDepensesActivity" />
         <activity android:name=".ListeEvenementsActivity" />
